--- a/m_3_bootstrap_website/index.html
+++ b/m_3_bootstrap_website/index.html
@@ -79,10 +79,10 @@
 
     <div id="top_books" class="mt-5 row">
 <!---------------------------------------- Book 1 ---------------------------------------->
-      <div class="card mb-4 bg-dark text-white">
+      <div class="card mb-4 bg-dark text-white border border-light">
         <div class="row">
           <div class="col-md-1" style="max-width: 540px;">
-            <img src="./assets/3.jfif" class="img-fluid rounded-start p-1">
+            <img src="./assets/3.jfif" class="img-fluid rounded-start p-1 m-3">
               </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -94,10 +94,10 @@
         </div>
       </div>
 <!---------------------------------------- Book 2 ---------------------------------------->
-    <div class="card mb-4 bg-dark text-white">
+    <div class="card mb-4 bg-dark text-white border border-light">
       <div class="row">
         <div class="col-md-1" style="max-width: 540px;">
-          <img src="./assets/5.jfif" class="img-fluid rounded-start p-1">
+          <img src="./assets/5.jfif" class="img-fluid rounded-start p-1 m-3">
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -109,14 +109,14 @@
       </div>
     </div>
 <!---------------------------------------- Book 3 ---------------------------------------->
-    <div class="card mb-4 bg-dark text-white">
+    <div class="card mb-4 bg-dark text-white border border-light">
       <div class="row">
         <div class="col-md-1" style="max-width: 540px;">
-          <img src="./assets/3.jfif" class="img-fluid rounded-start p-1">
+          <img src="./assets/3.jfif" class="img-fluid rounded-start p-1 m-3">
             </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Book Title 1</h5>
+            <h5 class="card-title">Book Title 3</h5>
             <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. .</p>
             <span class="badge text-bg-secondary">20 $</span>
           </div>
@@ -124,14 +124,14 @@
       </div>
     </div>
 <!---------------------------------------- Book 4 ---------------------------------------->
-    <div class="card mb-4 bg-dark text-white">
+    <div class="card mb-4 bg-dark text-white border border-light">
       <div class="row">
         <div class="col-md-1" style="max-width: 540px;">
-          <img src="./assets/5.jfif" class="img-fluid rounded-start p-1">
+          <img src="./assets/5.jfif" class="img-fluid rounded-start p-1 m-3">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Book Title 2</h5>
+            <h5 class="card-title">Book Title 4</h5>
             <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. .</p>
             <span class="badge text-bg-secondary">20 $</span>
           </div>
@@ -139,14 +139,14 @@
       </div>
     </div>
 <!---------------------------------------- Book 5 ---------------------------------------->
-    <div class="card mb-4 bg-dark text-white">
+    <div class="card mb-4 bg-dark text-white border border-light">
       <div class="row">
         <div class="col-md-1" style="max-width: 540px;">
-          <img src="./assets/3.jfif" class="img-fluid rounded-start p-1">
+          <img src="./assets/3.jfif" class="img-fluid rounded-start p-1 m-3">
             </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Book Title 1</h5>
+            <h5 class="card-title">Book Title 5</h5>
             <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. .</p>
             <span class="badge text-bg-secondary">20 $</span>
           </div>
@@ -154,14 +154,14 @@
       </div>
     </div>
 <!---------------------------------------- Book 6 ---------------------------------------->
-    <div class="card mb-4 bg-dark text-white">
+    <div class="card mb-4 bg-dark text-white border border-light">
       <div class="row">
         <div class="col-md-1" style="max-width: 540px;">
-          <img src="./assets/5.jfif" class="img-fluid rounded-start p-1">
+          <img src="./assets/5.jfif" class="img-fluid rounded-start p-1 m-3">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Book Title 2</h5>
+            <h5 class="card-title">Book Title 6</h5>
             <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. .</p>
             <span class="badge text-bg-secondary">20 $</span>
           </div>
